update UT and update api, format code and README