@@ -11,14 +11,13 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 class CurrencyControllerTest {
 
@@ -39,88 +38,112 @@ class CurrencyControllerTest {
     @Test
     void addExchangeRate_delegatesToService() {
         RateDto rate = new RateDto();
-        controller.addExchangeRate("EUR", "USD", "2023-01-01T00:00:00", rate);
-        verify(currencyService).addExchangeRate("EUR", "USD", "2023-01-01T00:00:00", rate);
+        rate.setAverageBid(1.23f);
+
+        controller.addExchangeRate("EUR", "2025/11/01 00:00:00", rate);
+
+        verify(currencyService, times(1)).addExchangeRate(eq("EUR"), eq("2025/11/01 00:00:00"), eq(rate));
     }
 
     @Test
-    void exchangeRateList_delegatesToService() {
-        when(currencyService.getExchangeRate("A", "B")).thenReturn(List.of(new CurrencyExchangeRate()));
-        var res = controller.exchangeRateList("A", "B");
-        assertThat(res).hasSize(1);
-        verify(currencyService).getExchangeRate("A", "B");
+    void exchangeRateList_returnsServiceResult() {
+        CurrencyExchangeRate e = new CurrencyExchangeRate();
+        e.setBaseCurrency("EUR");
+        e.setQuoteCurrency("USD");
+        List<CurrencyExchangeRate> expected = Collections.singletonList(e);
+
+        when(currencyService.getExchangeRate("EUR")).thenReturn(expected);
+
+        List<CurrencyExchangeRate> actual = controller.exchangeRateList("EUR");
+
+        assertSame(expected, actual);
+        verify(currencyService, times(1)).getExchangeRate("EUR");
     }
 
     @Test
-    void exchangeRateListAtTime_delegatesToService() {
-        when(currencyService.getExchangeRateAtTime("A", "B", "t")).thenReturn(List.of(new CurrencyExchangeRate()));
-        var res = controller.exchangeRateListAtTime("A", "B", "t");
-        assertThat(res).hasSize(1);
-        verify(currencyService).getExchangeRateAtTime("A", "B", "t");
+    void exchangeRateListAtTime_returnsServiceResult() {
+        CurrencyExchangeRate e = new CurrencyExchangeRate();
+        e.setBaseCurrency("EUR");
+        e.setQuoteCurrency("USD");
+        List<CurrencyExchangeRate> expected = Collections.singletonList(e);
+
+        when(currencyService.getExchangeRateAtTime("EUR", "2025/11/01 00:00:00")).thenReturn(expected);
+
+        List<CurrencyExchangeRate> actual = controller.exchangeRateListAtTime("EUR", "2025/11/01 00:00:00");
+
+        assertEquals(1, actual.size());
+        // expected baseCurrency is EUR and quoteCurrency is USD as set above
+        assertEquals("EUR", actual.get(0).getBaseCurrency());
+        assertEquals("USD", actual.get(0).getQuoteCurrency());
+        verify(currencyService, times(1)).getExchangeRateAtTime("EUR", "2025/11/01 00:00:00");
     }
 
     @Test
-    void exchangeRateListByBaseCurrencyCode_delegatesToService() {
-        when(currencyService.getExchangeRateByBaseCurrencyCode("A", "2023-01-01T00:00:00")).thenReturn(
-                List.of(new CurrencyExchangeRate()));
-        var res = controller.exchangeRateListByBaseCurrencyCode("A", "2023-01-01T00:00:00");
-        assertThat(res).hasSize(1);
-        verify(currencyService).getExchangeRateByBaseCurrencyCode("A", "2023-01-01T00:00:00");
+    void exchangeRateListByBaseCurrencyCode_returnsServiceResult() {
+        CurrencyExchangeRate e = new CurrencyExchangeRate();
+        e.setBaseCurrency("USD");
+        List<CurrencyExchangeRate> expected = Collections.singletonList(e);
+
+        when(currencyService.getExchangeRateByBaseCurrencyCode("USD", "2025/11/01 00:00:00")).thenReturn(expected);
+
+        List<CurrencyExchangeRate> actual = controller.exchangeRateListByBaseCurrencyCode("USD", "2025/11/01 00:00:00");
+
+        assertFalse(actual.isEmpty());
+        assertEquals("USD", actual.get(0).getBaseCurrency());
+        verify(currencyService, times(1)).getExchangeRateByBaseCurrencyCode("USD", "2025/11/01 00:00:00");
     }
 
     @Test
-    void exchangeRateListByQuoteCurrencyCode_delegatesToService() {
-        when(currencyService.getExchangeRateByQuoteCurrencyCode("B", "2023-01-01T00:00:00")).thenReturn(
-                List.of(new CurrencyExchangeRate()));
-        var res = controller.exchangeRateListByQuoteCurrencyCode("B", "2023-01-01T00:00:00");
-        assertThat(res).hasSize(1);
-        verify(currencyService).getExchangeRateByQuoteCurrencyCode("B", "2023-01-01T00:00:00");
-    }
+    void modifyExchangeRate_returnsUpdatedEntity() {
+        RateDto rate = new RateDto();
+        rate.setAverageBid(2.5f);
+        CurrencyExchangeRate updated = new CurrencyExchangeRate();
+        updated.setBaseCurrency("USD");
+        updated.setQuoteCurrency("JPY");
 
-    @Test
-    void modifyExchangeRate_delegatesAndReturns() {
-        CurrencyExchangeRate entity = new CurrencyExchangeRate();
-        when(currencyService.updateExchangeRate(eq("X"), eq("Y"), eq("2023-01-01T00:00:00"), any(RateDto.class)))
-                .thenReturn(entity);
-        var res = controller.modifyExchangeRate("X", "Y", "2023-01-01T00:00:00", new RateDto());
-        assertThat(res).isSameAs(entity);
-        verify(currencyService).updateExchangeRate(eq("X"), eq("Y"), eq("2023-01-01T00:00:00"), any(RateDto.class));
+        when(currencyService.updateExchangeRate("USD", "2025/11/01 00:00:00", rate)).thenReturn(updated);
+
+        CurrencyExchangeRate result = controller.modifyExchangeRate("USD", "2025/11/01 00:00:00", rate);
+
+        assertNotNull(result);
+        assertEquals("USD", result.getBaseCurrency());
+        assertEquals("JPY", result.getQuoteCurrency());
+        verify(currencyService, times(1)).updateExchangeRate("USD", "2025/11/01 00:00:00", rate);
     }
 
     @Test
     void getFxdsexchangeRateList_delegatesToClientService() {
-        var dto = new CurrencyExchangeRateDto();
-        when(clientService.getCurrencyExchangeRates(eq("EUR"), any(), any())).thenReturn(List.of(dto));
+        CurrencyExchangeRateDto dto = new CurrencyExchangeRateDto();
+        dto.setBaseCurrency("USD");
+        List<CurrencyExchangeRateDto> expected = Collections.singletonList(dto);
 
-        var res = controller.getFxdsexchangeRateList("EUR", LocalDateTime.of(2023, 1, 1, 0, 0));
-        assertThat(res).hasSize(1);
-        assertThat(res.get(0)).isSameAs(dto);
-        verify(clientService).getCurrencyExchangeRates(eq("EUR"), any(), any());
-    }
+        LocalDateTime updateTime = LocalDate.of(2025, 11, 1).atStartOfDay();
+        LocalDate startDate = updateTime.toLocalDate();
+        LocalDate endDate = updateTime.toLocalDate().plusDays(1);
 
-    // New tests for delete endpoints
-    @Test
-    void deleteExchangeRate_delegatesToService() {
-        controller.deleteExchangeRate("A", "B");
-        verify(currencyService).deleteExchangeRate("A", "B");
-    }
+        when(clientService.getCurrencyExchangeRates("USD", startDate, endDate)).thenReturn(expected);
 
-    @Test
-    void deleteExchangeRateAtTime_delegatesToService() {
-        String time = "2023-01-01T12:00:00";
-        controller.deleteExchangeRateAtTime("A", "B", time);
-        verify(currencyService).deleteExchangeRateAtTime("A", "B", time);
+        List<CurrencyExchangeRateDto> actual = controller.getFxdsexchangeRateList("USD", updateTime);
+
+        assertSame(expected, actual);
+        verify(clientService, times(1)).getCurrencyExchangeRates("USD", startDate, endDate);
     }
 
     @Test
-    void deleteExchangeRateByBaseCurrencyCode_delegatesToService() {
-        controller.deleteExchangeRateByBaseCurrencyCode("EUR", "2023-01-01T00:00:00");
-        verify(currencyService).deleteExchangeRateByBaseCurrencyCode("EUR", "2023-01-01T00:00:00");
+    void deleteExchangeRate_callsService() {
+        doNothing().when(currencyService).deleteExchangeRate("EUR");
+
+        controller.deleteExchangeRate("EUR");
+
+        verify(currencyService, times(1)).deleteExchangeRate("EUR");
     }
 
     @Test
-    void deleteExchangeRateByQuoteCurrencyCode_delegatesToService() {
-        controller.deleteExchangeRateByQuoteCurrencyCode("USD", "2023-01-01T00:00:00");
-        verify(currencyService).deleteExchangeRateByQuoteCurrencyCode("USD","2023-01-01T00:00:00");
+    void deleteExchangeRateAtTime_callsService() {
+        doNothing().when(currencyService).deleteExchangeRateAtTime("EUR", "2025/11/01 00:00:00");
+
+        controller.deleteExchangeRateAtTime("EUR", "2025/11/01 00:00:00");
+
+        verify(currencyService, times(1)).deleteExchangeRateAtTime("EUR", "2025/11/01 00:00:00");
     }
 }
